--- a/show_results.ipynb
+++ b/show_results.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -156,8 +156,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Local search con insert move"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -190,12 +197,22 @@
     "print(f\"status: {sol_local_search.status}\")\n",
     "print(f\"remaining time: {sol_local_search.remaining_time()}\")\n",
     "print(f\"jobs used: {sol_local_search.jobs_used()}\")\n",
-    "print(f\"max remaining time: {sol_local_search.max_remaining_time()}\")"
+    "print(f\"max remaining time: {sol_local_search.max_remaining_time()}\")\n",
+    "write_solution_to_excel(\n",
+    "    solution_finish_work.schedule, \"Data/schedule_best_solution.xlsx\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Local search swap move"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
