Refactory name and explain show_results.ipynb

--- a/show_results.ipynb
+++ b/show_results.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,65 +32,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creazioni di diverse soluzioni"
+    "#### Creazioni di diverse soluzioni\n",
+    "Il metodo costruttivo è basato nello scegliere la\\e lavorazione\\i più richiesta e con meno prodotti finita da lavorare sulla macchina più vuota e con più pallets di produzione.\n",
+    "\n",
+    "Con le lavorazioni scelte viene creato il job che avrà la dimensione massima possibile in base al tempo rimanente sulla macchina e il numero massimo che può produrre il job delle varie lavorazioni.\n",
+    "\n",
+    "La _base_solution_ viene creata con un metodo costruttivo che sceglie più lavorazioni diverse da eseguire in parallelo.\n",
+    "\n",
+    "La _solution_with_same_work_ viene creata con un metodo costruttivo che sceglie una lavorazione ed esegue la stessa in parallelo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils.algorithms import *\n",
     "\n",
-    "solution = Solution(\n",
+    "base_solution = Solution(\n",
     "    machines,\n",
     "    work_types,\n",
     "    customer_deadlines,\n",
     ")\n",
     "\n",
-    "solution.constructive_solution(create_job_to_finish_different_works)\n",
+    "base_solution.constructive_solution(create_job_with_different_works_in_parallel)\n",
     "\n",
-    "solution_finish_work = Solution(\n",
+    "solution_with_same_work = Solution(\n",
     "    machines,\n",
     "    work_types,\n",
     "    customer_deadlines,\n",
     ")\n",
-    "solution_finish_work.constructive_solution(create_job_to_finish_work)"
+    "solution_with_same_work.constructive_solution(create_job_with_same_work_in_parallel)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Stampa e salvataggio su file excel delle soluzioni"
+    "#### Grafico delle soluzioni costruttive\n",
+    "Una soluzione viene valutata in ordine in base:\n",
+    "- MIN jobs usati (ogni job costa una configurazione)\n",
+    "- MAX tempo rimanente totale (le lavorazioni sono state fatte in modo efficiente, sfruttando le pipeline)\n",
+    "- MAX macchina con il tempo rimanente maggiore (vuol dire che le altre macchine sono state sfruttate bene)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils.data_helper import write_solution_to_excel\n",
-    "\n",
-    "# print_solution(solution.schedule)\n",
-    "write_solution_to_excel(solution.schedule, \"Data/schedule_base.xlsx\")\n",
-    "\n",
-    "# print_solution(solution_finish_work.schedule)\n",
-    "write_solution_to_excel(solution_finish_work.schedule, \"Data/schedule_finish_work.xlsx\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Grafico delle soluzioni"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -109,9 +98,9 @@
      "text": [
       "Base solution\n",
       "status: constructed\n",
-      "remaining time: 3850\n",
       "jobs used: 7\n",
-      "max remaining time: 1950\n"
+      "total remaining time: 3850\n",
+      "max machine remaining time: 1950\n"
      ]
     },
     {
@@ -130,9 +119,9 @@
      "text": [
       "Finish work solution\n",
       "status: constructed\n",
-      "remaining time: 2750\n",
       "jobs used: 7\n",
-      "max remaining time: 1320\n"
+      "total remaining time: 2750\n",
+      "max machine remaining time: 1320\n"
      ]
     }
    ],
@@ -140,31 +129,34 @@
     "from utils.plot_helper import draw_gantt_chart\n",
     "\n",
     "\n",
-    "draw_gantt_chart(solution, is_label_work_type=True)\n",
+    "draw_gantt_chart(base_solution, is_label_work_type=True)\n",
     "print(f\"Base solution\")\n",
-    "print(f\"status: {solution.status}\")\n",
-    "print(f\"remaining time: {solution.remaining_time()}\")\n",
-    "print(f\"jobs used: {solution.jobs_used()}\")\n",
-    "print(f\"max remaining time: {solution.max_remaining_time()}\")\n",
+    "print(f\"status: {base_solution.status}\")\n",
+    "print(f\"jobs used: {base_solution.jobs_used()}\")\n",
+    "print(f\"total remaining time: {base_solution.total_remaining_time()}\")\n",
+    "print(f\"max machine remaining time: {base_solution.max_machine_remaining_time()}\")\n",
     "\n",
-    "draw_gantt_chart(solution_finish_work, is_label_work_type=True)\n",
+    "draw_gantt_chart(solution_with_same_work, is_label_work_type=True)\n",
     "print(f\"Finish work solution\")\n",
-    "print(f\"status: {solution_finish_work.status}\")\n",
-    "print(f\"remaining time: {solution_finish_work.remaining_time()}\")\n",
-    "print(f\"jobs used: {solution_finish_work.jobs_used()}\")\n",
-    "print(f\"max remaining time: {solution_finish_work.max_remaining_time()}\")"
+    "print(f\"status: {solution_with_same_work.status}\")\n",
+    "print(f\"jobs used: {solution_with_same_work.jobs_used()}\")\n",
+    "print(f\"total remaining time: {solution_with_same_work.total_remaining_time()}\")\n",
+    "print(\n",
+    "    f\"max machine remaining time: {solution_with_same_work.max_machine_remaining_time()}\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Local search con insert move"
+    "#### Local search con insert move\n",
+    "Il neighbor basato su una insert move, sposta il job solo su una macchina con il numero di pallet uguale o superiore rispetto alla macchina madre"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -183,36 +175,34 @@
      "text": [
       "Local search solution\n",
       "status: constructed\n",
-      "remaining time: 3850\n",
       "jobs used: 7\n",
-      "max remaining time: 3480\n"
+      "total remaining time: 3850\n",
+      "max machine remaining time: 3480\n"
      ]
     }
    ],
    "source": [
-    "sol_local_search = local_search(solution)\n",
+    "sol_local_search = local_search(base_solution)\n",
     "sol_local_search.standard_order()\n",
     "draw_gantt_chart(sol_local_search, is_label_work_type=True)\n",
     "print(f\"Local search solution\")\n",
     "print(f\"status: {sol_local_search.status}\")\n",
-    "print(f\"remaining time: {sol_local_search.remaining_time()}\")\n",
     "print(f\"jobs used: {sol_local_search.jobs_used()}\")\n",
-    "print(f\"max remaining time: {sol_local_search.max_remaining_time()}\")\n",
-    "write_solution_to_excel(\n",
-    "    solution_finish_work.schedule, \"Data/schedule_best_solution.xlsx\"\n",
-    ")"
+    "print(f\"total remaining time: {sol_local_search.total_remaining_time()}\")\n",
+    "print(f\"max machine remaining time: {sol_local_search.max_machine_remaining_time()}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Local search swap move"
+    "### Local search swap move\n",
+    "Il neighbor basato su una swap move, scambia il job solo su una macchina con il numero di pallet uguale rispetto alla macchina madre"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -231,21 +221,52 @@
      "text": [
       "Local search solution\n",
       "status: constructed\n",
-      "remaining time: 3850\n",
       "jobs used: 7\n",
-      "max remaining time: 2160\n"
+      "total remaining time: 3850\n",
+      "max machine remaining time: 2160\n"
      ]
     }
    ],
    "source": [
-    "sol_local_search = local_search(solution, neighbor_function=swap_move)\n",
-    "sol_local_search.standard_order()\n",
-    "draw_gantt_chart(sol_local_search, is_label_work_type=True)\n",
+    "sol_local_search_with_swap_move = local_search(\n",
+    "    base_solution, neighbor_function=swap_move\n",
+    ")\n",
+    "sol_local_search_with_swap_move.standard_order()\n",
+    "draw_gantt_chart(sol_local_search_with_swap_move, is_label_work_type=True)\n",
     "print(f\"Local search solution\")\n",
-    "print(f\"status: {sol_local_search.status}\")\n",
-    "print(f\"remaining time: {sol_local_search.remaining_time()}\")\n",
-    "print(f\"jobs used: {sol_local_search.jobs_used()}\")\n",
-    "print(f\"max remaining time: {sol_local_search.max_remaining_time()}\")"
+    "print(f\"status: {sol_local_search_with_swap_move.status}\")\n",
+    "print(f\"jobs used: {sol_local_search_with_swap_move.jobs_used()}\")\n",
+    "print(f\"total remaining time: {sol_local_search_with_swap_move.total_remaining_time()}\")\n",
+    "print(\n",
+    "    f\"max machine remaining time: {sol_local_search_with_swap_move.max_machine_remaining_time()}\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Salvataggio su file excel delle soluzioni"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.data_helper import write_solution_to_excel\n",
+    "\n",
+    "# print_solution(solution.schedule)\n",
+    "write_solution_to_excel(base_solution.schedule, \"Data/schedule_base.xlsx\")\n",
+    "\n",
+    "# print_solution(solution_from_works.schedule)\n",
+    "write_solution_to_excel(\n",
+    "    solution_with_same_work.schedule, \"Data/schedule_with_same_work.xlsx\"\n",
+    ")\n",
+    "write_solution_to_excel(\n",
+    "    sol_local_search.schedule, \"Data/schedule_with_local_search.xlsx\"\n",
+    ")"
    ]
   }
  ],
